# eml-gam

./: .gitignore  CITATION.cff  LICENSE  README.md  abalone_forest_results.json  aees_vs_gradient.json  constant_variant_check.json  cross_operator_landscape.json  demo.ipynb  landscape_results.json  multiseed_results.json  new_uci_results.json  pyproject.toml  results.json  subproblem_a_depth5.json  subproblem_a_numerical.json  subproblem_a_over_1x.json  symbolic_lemma_check.json  symbolic_lemma_check_N243.json  symbolic_lemma_check_modp_N100.json  tuned_real_world.json  uci_wins_summary.json
.github/workflows/: tests.yml
docs/: sheffer_analysis.md  theory.md  transcendence_analysis.md  transcendence_theorem.md
eml_gam/: __init__.py  atlas_expansion.py  eml_tree.py  gam.py  interaction_select.py  neural_beam.py  primitives.py  sheffer.py  symbolic.py  train.py  transcendence.py  transcendence_witness.py  utils.py
eml_gam/benchmarks/: __init__.py  ablation.py  aees_vs_gradient.py  cross_operator_landscape.py  extrapolation.py  feynman.py  landscape.py  multiseed.py  nguyen.py  physics_discovery.py  pysr_baseline.py  real_world.py  stats.py  (+3 more)
paper/: README.md  paper.tex
scripts/: aggregate_uci_wins.py  constant_variant_check.py  download_datasets.py  download_more_datasets.py  make_landscape_figure.py  run_abalone_forestfires.py  run_all_uci_benchmarks.sh  run_new_uci_datasets.py  run_tuned_real_world.py  save_results.py  subproblem_a_depth5.py  subproblem_a_numerical.py  subproblem_a_over_1x.py  symbolic_lemma_check.py  uniqueness_analysis.py
tests/: test_eml_tree.py
